# similar-player-search-system

./: .gitignore  README.md  pyproject.toml
data/: get_data.py
data/processed/: .~lock.neighbors.csv#
notebooks/: 1_EDA.ipynb  2_features.ipynb  3_modelagem.ipynb  4_avaliacao.ipynb  4_viewing.ipynb  5_viewing.ipynb  6_atletico.ipynb
src/spss/: __init__.py  distances.py  features.py  pipeline.py  preprocessing.py  retrieval.py  roles.py
tests/: test_distances.py  test_features.py  test_retrieval.py  test_roles.py
