[project]
name = "spss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pip>=26.1.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
